[tool.poetry]
name = "ma"
version = "0.1.0"
description = ""
authors = ["ser-ge <smosesov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wandb = "^0.10.23"
torch = "^1.8.1"
ma-gym = "^0.0.5"
tqdm = "^4.59.0"
ipython = "^7.21.0"
ptpython = "^3.0.17"
pynvim = "^0.4.3"
jedi = "^0.18.0"
pandas = "^1.2.3"
matplotlib = "^3.4.0"
gym = "^0.18.0"
jupyter = "^1.0.0"
jupytext = "^1.11.1"
xonsh = "^0.9.27"
tensorflow = "^2.4.1"
imgcat = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
